<resources>
    <string name="app_name">GeoQuiz</string>
    <string name="CapitalOfAustralia">Canberra is the capital of Australia</string>
    <string name="True">True</string>
    <string name="Question_text">Question</string>
    <string name="False">False</string>
    <string name="Back_Button">BackButton</string>
    <string name="Next">Next</string>
    <string name="correct_toast">Correct!</string>
    <string name="incorrect_toast">Incorrect!</string>
    <string name="question_australia">Canberra is the capital of Australia.</string>
    <string name="question_oceans">The Pacific Ocean is larger than the Atlantic Ocean.</string>
    <string name="question_mideast">The Suez Canal connects the Red Sea and the Indian Ocean.</string>
    <string name="question_africa">The source of the Nile River is in Egypt.</string>
    <string name="question_americas">The Amazon River is the longest river in the Americas.</string>
    <string name="question_asia">Lake Baikal is the world\'s oldest and deepest freshwater lake.</string>
</resources>